--- a/my-app/package.json
+++ b/my-app/package.json
@@ -12,6 +12,7 @@
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.0",
+    "react-burger-menu": "^3.0.9",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.17.0",
